[gd_scene load_steps=8 format=2]

[ext_resource path="res://demo_project/resources/fonts/NotoSans-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://demo_project/resources/themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://demo_project/scenes/main_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="GDScript" id=3]
script/source = "extends Button



func _on_Button_pressed():
	get_node(\"ConfirmationDialog/LineEdit\").text=GTD.variables[\"playername\"]
	get_node(\"ConfirmationDialog\").popup_centered_minsize()


func _on_ConfirmationDialog_confirmed():
	GTD.variables[\"playername\"] = get_node(\"ConfirmationDialog/LineEdit\").text

"

[sub_resource type="GDScript" id=2]
script/source = "tool
extends Button


func _on_Help_pressed():
	var popup=get_node(\"AcceptDialog\")
	popup.popup_centered_ratio()


func _on_RichTextLabel_meta_clicked(meta):
	var _error = OS.shell_open(meta)
"

[sub_resource type="GDScript" id=4]
script/source = "extends Button




func _on_credits_pressed():
	get_node(\"AcceptDialog\").popup_centered_minsize()
"

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="VBoxContainer" parent="."]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info_label" type="Label" parent="Start"]
margin_right = 819.0
margin_bottom = 127.0
size_flags_horizontal = 5
custom_fonts/font = SubResource( 1 )
text = "If you are running this from within Godot, make sure you have the GraphTasticDialog plugin enabled:
Click the checkbox under [Project]->[Project Settings]->[Plugins], then [Update] or restart Godot.

This editor can't save/load/play stories atm, use the real plugin in godot for that.
You can open the story file in the editor res://demo_project/story_files/intro.tsv"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="emptyspace" type="Control" parent="Start"]
margin_top = 136.0
margin_right = 819.0
margin_bottom = 241.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control" type="Control" parent="Start"]
margin_top = 250.0
margin_right = 819.0
margin_bottom = 356.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Start/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -146.5
margin_top = -52.0
margin_right = 146.5
margin_bottom = 52.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="demo_project" type="Button" parent="Start/Control/VBoxContainer"]
margin_right = 293.0
margin_bottom = 23.0
text = "Play the demo project"

[node name="mockup_editor" type="Button" parent="Start/Control/VBoxContainer"]
margin_top = 27.0
margin_right = 293.0
margin_bottom = 50.0
text = "editor preview(limited functionality)"

[node name="NameChangeButton" type="Button" parent="Start/Control/VBoxContainer"]
margin_top = 54.0
margin_right = 293.0
margin_bottom = 77.0
text = "change your name"
script = SubResource( 3 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="Start/Control/VBoxContainer/NameChangeButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -119.5
margin_top = -72.0
margin_right = 143.5
margin_bottom = 14.0
rect_min_size = Vector2( 200, 120 )
dialog_text = "Change your name to:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Start/Control/VBoxContainer/NameChangeButton/ConfirmationDialog"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -255.0
margin_top = -29.0
margin_right = -8.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 20 )
text = "Paul"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="help" type="Button" parent="Start/Control/VBoxContainer"]
margin_top = 81.0
margin_right = 293.0
margin_bottom = 104.0
text = "help / info"
flat = true
script = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="AcceptDialog" parent="Start/Control/VBoxContainer/help"]
margin_left = -434.0
margin_right = 536.0
margin_bottom = 1219.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Start/Control/VBoxContainer/help/AcceptDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 962.0
margin_bottom = 1183.0
bbcode_enabled = true
bbcode_text = "This is an early version of the GraphTastic- Editor.
So some features are still unfinished, with disabled buttons, but i dont plan on breaking any future compatabilty. If you find bugs or unexpected behavior. i'd apprciate you reporting them on: https://github.com/vinceprobst/graphtastic/issues
Same goes for any suggestions to improve the plugin.

You can use this plugin and it's source code without crediting me, for comercial or noncomercial projects as you see fit, or salvage and alter whatever parts you want from it. Though i personally would love, to hear back from any finished project using this.







quickguide: 
	[*]click \"new graph\" after you started the editor. Now press edit on the new graph and fill in \"hello world\" in the big text box. Close the text-window (by clicking x or anywhere else on the screen) and lets add another node and connect it to the first. Now lets add a 2nd node by clicking the connection spot near the number 1 and releasing on a free space in the grid. add \"a fine world\" to that node. Now click \"save to .tsv\" on the right top.
[*]Now we can go back to the normal 2D view. Create a new scene and add the GT_TexboxPlayer node as we would a normal TextLabel. When we have it selected there should show up \"Resource Path\" on the top of the inspector. Fill in the path of the file we crated. Since we want our dialog to start at the first node in the first chapter we can leave the other values as they are. Press F6 to play the scene and it should work.


some info/notes i'll put just here till i make a proper readme/help function or documentation:
	[*] make sure to load the GT_TextboxPlayer last, compared to other GT-nodes. (e.g. if all GT- nodes have the same parent just put it at the bottom)
[*] if you wanna use the variable-functions of GT, just fill in all variables you want to use into GTP.variables={ \"health\": 100, \"playername\": \"paul\" } before. GTP is a singleton so you can access it from any script in your code.  (similar GTP.pictures if you dont want to write the full resource_path each time for the pictures)
[*] GT_Speaker and GT_Pictures \"speaker_persistant\" property will either keep showing the last image/text if there is a blank entry in the next graphnode. Otherwise no entry always means those nodes will turn invisible till needed again.
[*] all GT_ nodes emit a bunch of custom signals. This should make it easy to add custom animations, soundeffects etc. to your dialog. Signals can be either captured from the nodes directly, or from GTP, who forwards all signals used.


how the graphs connections gets parsed (choies and if statments)
	[*] if there is any value in the choice slot it gets treated as a choice-slot otherwise as an if-slot
[*] choices always get priory, choices become clickable buttons for the player to select from
[*] choices with an if statement get disabled when false
[*] when all choices are false, or no choices at all, then the dialog-player will go from top to bottom to look for a path where the ifstatement is true
[*]  an empty or \"\" or \" \" or \"#\" (without the \") statement will return true aswell.
[*] if there is no connection for the dialog-player left it will start to end the dialog
"
text = "This is an early version of the GraphTastic- Editor.
So some features are still unfinished, with disabled buttons, but i dont plan on breaking any future compatabilty. If you find bugs or unexpected behavior. i'd apprciate you reporting them on: https://github.com/vinceprobst/graphtastic/issues
Same goes for any suggestions to improve the plugin.

You can use this plugin and it's source code without crediting me, for comercial or noncomercial projects as you see fit, or salvage and alter whatever parts you want from it. Though i personally would love, to hear back from any finished project using this.







quickguide: 
	[*]click \"new graph\" after you started the editor. Now press edit on the new graph and fill in \"hello world\" in the big text box. Close the text-window (by clicking x or anywhere else on the screen) and lets add another node and connect it to the first. Now lets add a 2nd node by clicking the connection spot near the number 1 and releasing on a free space in the grid. add \"a fine world\" to that node. Now click \"save to .tsv\" on the right top.
[*]Now we can go back to the normal 2D view. Create a new scene and add the GT_TexboxPlayer node as we would a normal TextLabel. When we have it selected there should show up \"Resource Path\" on the top of the inspector. Fill in the path of the file we crated. Since we want our dialog to start at the first node in the first chapter we can leave the other values as they are. Press F6 to play the scene and it should work.


some info/notes i'll put just here till i make a proper readme/help function or documentation:
	[*] make sure to load the GT_TextboxPlayer last, compared to other GT-nodes. (e.g. if all GT- nodes have the same parent just put it at the bottom)
[*] if you wanna use the variable-functions of GT, just fill in all variables you want to use into GTP.variables={ \"health\": 100, \"playername\": \"paul\" } before. GTP is a singleton so you can access it from any script in your code.  (similar GTP.pictures if you dont want to write the full resource_path each time for the pictures)
[*] GT_Speaker and GT_Pictures \"speaker_persistant\" property will either keep showing the last image/text if there is a blank entry in the next graphnode. Otherwise no entry always means those nodes will turn invisible till needed again.
[*] all GT_ nodes emit a bunch of custom signals. This should make it easy to add custom animations, soundeffects etc. to your dialog. Signals can be either captured from the nodes directly, or from GTP, who forwards all signals used.


how the graphs connections gets parsed (choies and if statments)
	[*] if there is any value in the choice slot it gets treated as a choice-slot otherwise as an if-slot
[*] choices always get priory, choices become clickable buttons for the player to select from
[*] choices with an if statement get disabled when false
[*] when all choices are false, or no choices at all, then the dialog-player will go from top to bottom to look for a path where the ifstatement is true
[*]  an empty or \"\" or \" \" or \"#\" (without the \") statement will return true aswell.
[*] if there is no connection for the dialog-player left it will start to end the dialog
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="credits" type="Button" parent="Start/Control/VBoxContainer"]
margin_top = 108.0
margin_right = 293.0
margin_bottom = 131.0
text = "credit"
script = SubResource( 4 )

[node name="AcceptDialog" type="AcceptDialog" parent="Start/Control/VBoxContainer/credits"]
margin_right = 90.0
margin_bottom = 70.0
dialog_text = "face-pictures created with: https://github.com/ShatReal/sutemo
city_bg.jpg and forest_bg.jpg by Luis Zuno (@ansimuz): https://www.patreon.com/ansimuz
menuframes dark.png, flower.png and map.png from https://stubbornbudgie.itch.io/
speach sound from elmasmalo1: https://freesound.org/s/350883/

And definitly big thanks to DaveTheDev and his youtube-series arround his dialog soloution.
That gave me a good starting point: https://github.com/EXPWorlds/Godot-Dialog-System"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Start"]
margin_top = 365.0
margin_right = 819.0
margin_bottom = 365.0
size_flags_horizontal = 3
alignment = 1

[node name="emptyspace2" type="Control" parent="Start"]
margin_top = 374.0
margin_right = 819.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="Start/Control/VBoxContainer/demo_project" to="." method="_on_demo_project_pressed"]
[connection signal="pressed" from="Start/Control/VBoxContainer/mockup_editor" to="." method="_on_mockup_editor_pressed"]
[connection signal="pressed" from="Start/Control/VBoxContainer/NameChangeButton" to="Start/Control/VBoxContainer/NameChangeButton" method="_on_Button_pressed"]
[connection signal="confirmed" from="Start/Control/VBoxContainer/NameChangeButton/ConfirmationDialog" to="Start/Control/VBoxContainer/NameChangeButton" method="_on_ConfirmationDialog_confirmed"]
[connection signal="pressed" from="Start/Control/VBoxContainer/help" to="Start/Control/VBoxContainer/help" method="_on_Help_pressed"]
[connection signal="meta_clicked" from="Start/Control/VBoxContainer/help/AcceptDialog/RichTextLabel" to="Start/Control/VBoxContainer/help" method="_on_RichTextLabel_meta_clicked"]
[connection signal="pressed" from="Start/Control/VBoxContainer/credits" to="Start/Control/VBoxContainer/credits" method="_on_credits_pressed"]
